--- a/html-basic.html
+++ b/html-basic.html
@@ -110,7 +110,7 @@
       <dd><input type="time"></dd>
 
     <dt>照片</dt>
-      <dd><label><input hidden type="file">点我上传照片，我比文件上传按钮好看</label></dd>
+      <dd><label><input hidden type="file" accept="img/*">点我上传照片，我比文件上传按钮好看</label></dd>
 
     <dt>肤色</dt>
       <dd><input type="color"></dd>
