--- a/html-basic.html
+++ b/html-basic.html
@@ -116,7 +116,7 @@
       <dd><input type="color"></dd>
 
     <dt>自我介绍</dt>
-      <dd><textarea>请简单介绍一下自己</textarea></dd>
+      <dd><textarea cols="30" rows="10">请简单介绍一下自己</textarea></dd>
     </dl>
 
     <fieldset disabled>
