--- a/html-basic.html
+++ b/html-basic.html
@@ -147,10 +147,12 @@
     
 <table border="">
     <caption>货品列表</caption>
+    <col bgcolor="">
+    <col bgcolor="red">
     <thead>
       <tr>
         <th>编号</th>
-        <th bgcolor="red">品名</th>
+        <th >品名</th>
         <th>进价</th>
         <th>出价</th>
       </tr>
@@ -158,24 +160,24 @@
     <tbody>
       <tr>
         <th>001</th>
-        <td bgcolor="red">苹果</td>
+        <td >苹果</td>
         <td rowspan="2">5</td>
         <td>8</td>
       </tr>
       <tr>
         <th>002</th>
-        <td bgcolor="red">桔子</td>
+        <td >桔子</td>
         <td>8</td>
       </tr>
       <tr>
         <th>003</th>
-        <td bgcolor="red">香蕉</td>
+        <td >香蕉</td>
         <td>5</td>
         <td>8</td>
       </tr>
       <tr>
         <th>004</th>
-        <td bgcolor="red">山竹</td>
+        <td >山竹</td>
         <td>5</td>
         <td>8</td>
       </tr>
