--- a/css-triangle.html
+++ b/css-triangle.html
@@ -7,25 +7,28 @@
   <title>Document</title>
   <style>
   div{
+      box-sizing:border-box;
+    }
+  div{
     /* 等腰直角三角形 */
       border-top:salmon solid 20px;
       border-right:red solid 20px;
       border-bottom:gold solid 20px;
-      border-left:greenyellow solid 20px；
+      border-left:greenyellow solid 20px;
   }
   h1{
     /* 30°，60°，90° */
       border-top:salmon solid 34.64px;
       border-right:red solid 20px;
       border-bottom:gold solid 0px;
-      border-left:greenyellow solid 0px； 
+      border-left:greenyellow solid 0px;
   }
   h2{
     /* 等边三角形 */
       border-top:salmon solid 10px;
       border-right:red solid 17.32px;
       border-bottom:gold solid 10px;
-      border-left:greenyellow solid 0px；
+      border-left:greenyellow solid 0px;
   }
   </style>
 </head>
