--- a/css-triangle.html
+++ b/css-triangle.html
@@ -8,7 +8,7 @@
   <style>
   div{
       box-sizing:border-box;
-    }
+    } 
   div{
     /* 等腰直角三角形 */
       border-top:salmon solid 20px;
@@ -16,14 +16,14 @@
       border-bottom:gold solid 20px;
       border-left:greenyellow solid 20px;
   }
-  h1{
+ .one{
     /* 30°，60°，90° */
       border-top:salmon solid 34.64px;
       border-right:red solid 20px;
       border-bottom:gold solid 0px;
       border-left:greenyellow solid 0px;
   }
-  h2{
+  .two{
     /* 等边三角形 */
       border-top:salmon solid 10px;
       border-right:red solid 17.32px;
@@ -33,8 +33,9 @@
   </style>
 </head>
 <body>
-  <div></div> 
-  <h1></h1>
-  <h2></h2> 
+  <div ></div> 
+  <div class="one"></div>
+  <div class="two"></div>
+  
 </body>
 </html>
