--- a/normal-flow-horizontal.html
+++ b/normal-flow-horizontal.html
@@ -25,7 +25,7 @@
   }
   
   p{
-    /* height:50px;  */
+    /* height:50px;  不能定宽，会抽风 */
     background-color:lightblue;
     /* display:inline; */
   }
