--- a/qq-mail.html
+++ b/qq-mail.html
@@ -7,7 +7,7 @@
   <title>qq-mail</title>
   <style>
     html{
-      height:100%；
+      height:100%;
     }
     body{
         height: 100%;
@@ -26,7 +26,7 @@
     }
     .box2{
       margin-left: 199px;
-      width:calc(100%-200px);
+      width:calc(100% - 200px);
       height:40px;
       border-bottom: 1px solid #DADADA; 
       line-height: 40px;
@@ -34,7 +34,7 @@
       background-color:#FAFAFA;
     } 
      .fbox{ 
-      height: calc(100%-40px);
+      height: calc(100% - 40px);
       margin: 0;
       padding:0;
       box-sizing: border-box;
@@ -65,13 +65,14 @@
      .box4{
       margin-left:  199px;
       height: 100%;
-      width:calc(100%-200px);
+      width:calc(100% - 200px);
      
       text-align:top;
     } 
   </style> 
 </head>
 <body>
+ 
   <div>
       <div class="box1"> <a href="https://w.mail.qq.com/cgi-bin/mobile?sid=4rs7ydn84CLMKU0WDKHQO-Ct,4,qM0VIeFowU25Ickk1SE1CNUwwcmg1aTdkSjhsOXVqWGxkZTJSQ0I1eVhqNF8.&t=phone#today,reload"><img src="./qqmailtubiao.png" alt="qq-mail"></a> 
       </div>   
@@ -95,5 +96,6 @@
       </div>
       <div class="box4">sdfdsf</div>
   </div>
+
 </body>
 </html>
