--- a/oald-layout-position.html
+++ b/oald-layout-position.html
@@ -31,7 +31,7 @@
     border-right: 1px solid black;
     top: 0;
     left:calc(25% );
-    background-color: orange;
+    background-color: orange;s
   }
   #box1{
     position: absolute; 
