--- a/radio-slider.html
+++ b/radio-slider.html
@@ -1,48 +1,124 @@
-https://resource.smartisan.com/resource/2/2018112001.png?x-oss-process=image/format,jpg/quality,Q_100
-
-https://resource.smartisan.com/resource/s/shoujiao1111111.png?x-oss-process=image/format,jpg/quality,Q_100
-
-
-
-https://resource.smartisan.com/resource/x/xinpinjuheshoujiao1111.png?x-oss-process=image/format,jpg/quality,Q_100
-
-
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
   <style>
-  
-  img{
-  width: 100%;
-  position: absolute;
-  top:40px;
-  transition:all 1s ease;
-  opacity:0;/*透明度*/
-  left:0;
+  *{
+  background-color: rgba(0,0,0,0.08);
+}
+.r {
+    width:296px;
+    height:374px;
+    border:1px solid;    
+    position:relative;
 }
 
-input[type="radio"]:checked + img{
+
+/* .r{
+ 想让盒子居中
+  vertical-align: middle;
+  
+} */
+header{
+  text-align:center;
+  color:red;
+  
+}
+
+.r div{
+  width:216px;
+  height:154px;
+  /* border:1px solid red; */
+  position:absolute; 
+  bottom:50px;
+  left:0;
+  right:0;
+  margin:auto;
+  opacity:0;
+  transition:.4s;
+}
+img{
+  position:absolute;
+  
+}
+.r input{
+  position:relative;
+  /* display:none; */
+}
+section{
+  position:absolute;
+  top:340px;
+  /* width:100%; */
+  width:106px;
+  left:0;
+  right:0;
+  margin:auto;
+  /* text-align:center; */
+  
+}
+section label{
+  display:inline-block;
+  height:16px;
+  width:16px;
+  border-radius:50%;
+  background-color: white;
+  margin:3px;
+} 
+.r>div>label{
+  position:absolute;
+  width:30px;
+  height:60px;
+  border:1px solid;
+  left:0;
+  right:0;
+  margin:auto;
+  
+}
+input:checked + * + * + * + div {
   opacity:1;
 }
-  
-  
-  
-  
+
   </style>
 </head>
 <body>
-    <input type="radio" name="s" id="">
-    <img src="https://resource.smartisan.com/resource/x/xinpinjuheshoujiao1111.png?x-oss-process=image/format,jpg/quality,Q_100" alt="">
-    <input type="radio" name="s" id="">
-    <img src="https://resource.smartisan.com/resource/s/shoujiao1111111.png?x-oss-process=image/format,jpg/quality,Q_100" alt="">  
-    <input type="radio" name="s" id="">
-    <img src="https://resource.smartisan.com/resource/2/2018112001.png?x-oss-process=image/format,jpg/quality,Q_100" alt="">
-    
-      
+<div class="r">
+  <header>游戏</header>
+  
+    <input type="radio" name="e" id="a">
+    <input type="radio" name="e" id="b">
+    <input type="radio" name="e" id="c">
+    <input type="radio" name="e" id="d">
+ 
+  
+  <div>
+    <label for="d">&#9664;</label>
+    <label for="b">&#9654;</label>
+    <img  src="https://i1.mifile.cn/a4/xmad_15299832299419_eIPOw.png" alt="" checked>
+  </div>
+  <div >
+    <label for="a">&#9664;</label>
+    <label for="c">&#9654;</label>
+    <img  src="https://i1.mifile.cn/a4/xmad_15120234492499_MNEVo.png" alt="">
+  </div>
+  <div>
+    <label for="b">&#9664;</label>
+    <label for="d">&#9654;</label>
+    <img src="https://i1.mifile.cn/a4/T1czW_BXCv1R4cSCrK.png" alt="">
+  </div>
+  <div>
+    <label for="c">&#9664;</label>
+    <label for="a">&#9654;</label>
+    <img  src="https://s01.mifile.cn/i/index/more-game.jpg" alt="" >
+  </div>
+  
+  <section>
+    <label for="a"></label>
+    <label for="b"></label>
+    <label for="c"></label>
+    <label for="d"></label>
+  </section> 
+</div>
 </body>
 </html>
