--- a/9-grid.html
+++ b/9-grid.html
@@ -91,7 +91,7 @@ td{
 td:hover{
   border:5px solid red;/*颜色来源：td>tr>tbody>col>colgroup>table*/
  
-}
+}/*li中存在空格 可调fontsize或者将li连续排放*/
   </style>
 </head>
 <body>
