--- a/noi.html
+++ b/noi.html
@@ -1,44 +1,43 @@
-
- <script id = "ch0103/01" type = "ch0103/01" >
+<script id="ch0103/01" type="ch0103/01">
   var a = +prompt("请输入A");
   var b = +prompt("请输入B");
   var c = a + b;
   alert(c);
- </script> 
- <script id = "ch0103/02" type = "ch0103/02">
+ </script>
+<script id="ch0103/02" type="ch0103/02">
   var a = +prompt("请输入A")
   var b = +prompt("请输入B")
   var c = +prompt("请输入C")
   var d = (a  + b) * c;
   alert(d);
  </script>
- <script id = "ch0103/03" type="ch0103/03">
+<script id="ch0103/03" type="ch0103/03">
   var a = +prompt("请输入A")
   var b = +prompt("请输入B")
   var c = +prompt("请输入C")
   var d = (a  + b) / c;
   alert(d);
  </script>
-<script id = "ch0103/04" type="ch0103/04">
+<script id="ch0103/04" type="ch0103/04">
   var a = +prompt("请输入A")
   var b = +prompt("请输入B")
   var c = Math.floor(a / b)
   var d = a % b  
   console.log( c, d)
 </script>
-<script id = "ch0103/05" type="ch0103/05">
+<script id="ch0103/05" type="ch0103/05">
   var a = +prompt("请输入A")
   var b = +prompt("请输入B")
   var c = a / b
   alert(c.toFixed(9))
 </script>
-<script id = "ch0103/06" type = "ch0103/06">
+<script id="ch0103/06" type="ch0103/06">
   var a = +prompt("请输入确诊数")
   var b = +prompt("请输入死亡数")
   var c = (b / a) * 100 
   alert(c.toFixed(3) + "%")
 </script>
-<script id = "ch0103/07" type = "ch0103/07">
+<script id="ch0103/07" type="ch0103/07">
   var a = +prompt("请输入a")
   var b = +prompt("请输入b")
   var c = +prompt("请输入c")
@@ -47,13 +46,13 @@
   g = a*x*x*x + b*x*x + c*x + d
   alert(g.toFixed(7))
 </script>
-<script id = "ch0103/08" type = "ch0103/08">
+<script id="ch0103/08" type="ch0103/08">
   var f >= -459.67
   var f = +prompt("请输入华氏温度F")
   var c = 5 * (f - 32)/9
   alert(c.toFixed(5))
 </script>
-<script id = "ch0103/09" type = "ch0103/09">
+<script id="ch0103/09" type="ch0103/09">
   var pi = 3.141592653
   var a = +prompt("请输入圆的半径")
   var b = 2 * a
@@ -61,25 +60,25 @@
   var s = pi * a * a
   console.log(b.toFixed(4) , c.toFixed(4) , s.toFixed(4))
 </script>
-<script id = "ch0103/10" type = "ch0103/10">
+<script id="ch0103/10" type="ch0103/10">
   var a = +prompt("请输入第一个电阻的阻抗a")
   var b = +prompt("请输入第二个电阻的阻抗b")
   var r = 1/(1/a + 1/b)
   alert(r.toFixed(2))
 </script>
-<script id = "ch0103/11" type = "ch0103/11">
+<script id="ch0103/11" type="ch0103/11">
   var a = +prompt("请输入双精度浮点数a")
   var b = +prompt("请输入双精度浮点数b")
   var c = a / b - Math.floor(a / b)
   alert(c)
 </script>
-<script id = "ch0103/12" type = "ch0103/12">
+<script id="ch0103/12" type="ch0103/12">
   var pi = 3.141592653
   var a = +prompt("请输入圆的半径")
   var v = pi * a * a * a * 4 / 3
   alert(v.toFixed(2))
 </script>
-<script id = "ch0103/13" type = "ch0103/13">
+<script id="ch0103/13" type="ch0103/13">
   var a = +prompt("请输入一个三位数a")
   var b = a % 10/*个位*/
   // var c = Math.floor(a / 10) % 10 /*十位*/
@@ -89,21 +88,21 @@
   var d = (a - c * 100 - b) / 10 //十位
   console.log(c , d , a)
 </script>
-<script id = "ch0103/14" type = "ch0103/14"> 
-var a = +prompt("请输入桶深h")
+<script id="ch0103/14" type="ch0103/14">
+  var a = +prompt("请输入桶深h")
 var b = +prompt("请输入底面半径r")
 var pi = 3.14159
 var c = 20000/(pi * b * b * a)
 alert(Math.ceil(c))
 </script>
-<script id = "ch0103/15" type = "ch0103/15">
+<script id="ch0103/15" type="ch0103/15">
   var n = +prompt("请输入苹果数n")
   var x = +prompt("请输入虫子吃苹果效率x")
   var y = +prompt("请输入时间y")
   var z = n - Math.ceil(y / x)
   alert(z)
 </script>
-<script id = "ch0103/16" type = "ch0103/16">
+<script id="ch0103/16" type="ch0103/16">
   var a = +prompt("请输入x1坐标值")
   var b = +prompt("请输入x2坐标值")
   var c = +prompt("请输入y1坐标值")
@@ -111,7 +110,7 @@ alert(Math.ceil(c))
   var e = Math.sqrt((a - b) * (a - b) + (c - d) * (c - d))
   alert(e.toFixed(3))
 </script>
-<script id = "ch0103/17" type = "ch0103/17">
+<script id="ch0103/17" type="ch0103/17">
   var a = +prompt("请输入x1坐标值")
   var b = +prompt("请输入y1坐标值")
   var c = +prompt("请输入x2坐标值")
@@ -125,7 +124,7 @@ alert(Math.ceil(c))
   var s = Math.sqrt(h4 * (h4 - h1) * (h4 - h2) * (h4 - h3))
   alert(s.toFixed(2))
 </script>
-<script id = "ch0103/18" type = "ch0103/18"> 
+<script id="ch0103/18" type="ch0103/18">
   var a1 = +prompt("请输入等差数列首项")
   var a2 = +prompt("请输入等差数列第二项")
   var n = +prompt("请输入等差数列项数n")
@@ -133,18 +132,18 @@ alert(Math.ceil(c))
   var an = a1 + (n - 1) * d
   alert(an)
 </script>
-<script id = "ch0103/19" type = "ch0103/19">
+<script id="ch0103/19" type="ch0103/19">
   var a = +prompt("请输入正整数a")
   var b = +prompt("请输入正整数b")
   var c = a * b
   alert(c)
 </script>
-<script id = "ch0103/20" type = "ch0103/20">
+<script id="ch0103/20" type="ch0103/20">
   var n = +prompt("请输入整数n")
   var b = Math.pow(2,n)
   alert(b)
 </script>
-<script id = "ch0104/01" type = "ch0104/01">
+<script id="ch0104/01" type="ch0104/01">
   var a = +prompt("请输入整数n")
   if (a > 0){
     alert("positive")
@@ -156,7 +155,7 @@ alert(Math.ceil(c))
     alert("negitive")
   }
 </script>
-<script id = "ch0104/02" type = "ch0104/02">
+<script id="ch0104/02" type="ch0104/02">
   var a = +prompt("请输入浮点数a")
   if (a >= 0){
     alert(a.toFixed(2))
@@ -165,17 +164,17 @@ alert(Math.ceil(c))
     alert((-a).toFixed(2))
   }
 </script>
-<script id = "ch0104/03" type = "ch0104/03">
+<script id="ch0104/03" type="ch0104/03">
   var a = +prompt("请输入一个数a")
-  if (a % 2 == 0){
+  if (Math.abs(a) % 2 == 0){
     alert("even")
   }
   else{
     alert("odd")
   }
 </script>
-<script id = "ch0104/04" type = "ch0104/04">
-var a = prompt("请输入一个字符a")
+<script id="ch0104/04" type="ch0104/04">
+  var a = prompt("请输入一个字符a")
 if ((a.charCodeAt(0)) % 2 == 0){
   alert("NO")
 }
@@ -183,7 +182,7 @@ else{
   alert("YES")
 }
 </script>
-<script id = "ch0104/05" type = "ch0104/05">
+<script id="ch0104/05" type="ch0104/05">
   var a = +prompt("请输入整数x")
   var b = +prompt("请输入整数y")
   if (a > b){
@@ -196,7 +195,7 @@ else{
     alert("=")
   }
 </script>
-<script id = "ch0104/06" type = "ch0104/06">
+<script id="ch0104/06" type="ch0104/06">
   var a = +prompt("请输入一个正整数s")
   if (!(a / 10 >= 1)){
     alert(0)
@@ -205,7 +204,7 @@ else{
     alert(1)
   }
 </script>
-<script id = "ch0104/07" type = "ch0104/07">
+<script id="ch0104/07" type="ch0104/07">
   var a = +prompt("请输入幸运瓶盖数a")
   var b = +prompt("请输入鼓励瓶盖数b")
   if (a >= 10 ){
@@ -218,7 +217,7 @@ else{
     alert("0")
   }
 </script>
-<script id = "ch0104/08" type = "ch0104/08">
+<script id="ch0104/08" type="ch0104/08">
   var a = +prompt("请输入一个数n")
   if(a % 15 == 0){
     alert("YES")
@@ -227,34 +226,28 @@ else{
     alert("NO")
   }
 </script>
-<script id = "ch0104/09" type = "ch0104/09">
-   var a = +prompt("请输入一个数n")
+<script id="ch0104/09" type="ch0104/09">
+  var a = +prompt("请输入一个数n")
   if(a % 105 == 0){
-    alert("3" + "5" + "7")
-  }
-  else if((a % 15 == 0) && !(a % 21 == 0) && !(a % 35 == 0)){
+    alert("3" + "5" + "7") 
+  if((a % 15 == 0) && !(a % 21 == 0) && !(a % 35 == 0))
     alert("3" + "5")
-  }
-  else if((a % 21 == 0) && !(a % 15 == 0) && !(a % 35 == 0)){
+  if((a % 21 == 0) && !(a % 15 == 0) && !(a % 35 == 0))
     alert("3" + "7")
-  }
-  else if((a % 35 == 0) && !(a % 15 == 0) && !(a % 21 == 0)){
+  if((a % 35 == 0) && !(a % 15 == 0) && !(a % 21 == 0))
     alert("5" + "7")
-  }
-  else if((a % 3 == 0) && !(a % 5 == 0) && !(a % 7 == 0)){
+  if((a % 3 == 0) && !(a % 5 == 0) && !(a % 7 == 0))
     alert("3")
-  }
-  else if((a % 5 == 0) && !(a % 3 == 0) && !(a % 7 == 0)){
+  if((a % 5 == 0) && !(a % 3 == 0) && !(a % 7 == 0))
     alert("5")
-  }
-  else if((a % 7 == 0) && !(a % 3 == 0) &&  !(a % 5 == 0)){
+  if((a % 7 == 0) && !(a % 3 == 0) &&  !(a % 5 == 0))
     alert("7")
   }
   else{
     alert(a)
   }
 </script>
-<script id = "ch0104/10" type = "ch0104/10">
+<script id="ch0104/10" type="ch0104/10">
   var a = +prompt("请输入语文课成绩a")
   var b = +prompt("请输入数学课成绩b")
   if((a >= 60)||(b >= 60)){
@@ -264,7 +257,7 @@ else{
     alert(0)
   }
 </script>
-<script id = "ch0104/11" type = "ch0104/11">
+<script id="ch0104/11" type="ch0104/11">
   var d = +prompt("请输入今天是星期几，用数字1-7代表")
   if((d == 1) || (d == 3) || (d == 5)){
     alert("YES")
@@ -273,7 +266,7 @@ else{
     alert("NO")
   }
 </script>
-<script id = "ch0104/12" type = "ch0104/12">
+<script id="ch0104/12" type="ch0104/12">
   var a = +prompt("请输入行走距离a")
   var t1 = 27
   var t2 = 23
@@ -289,19 +282,19 @@ else{
     alert("Bike")
   }
 </script>
-<script id = "ch0104/13" type = "ch0104/13">
+<script id="ch0104/13" type="ch0104/13">
   var x = +prompt("请输入一个浮点数n")
-  if( 0 <= x < 5){
+  if( 0 <= x && x < 5){
     alert((-x+2.5).toFixed(3))
   }
-  else if(5 <= x < 10){
+  else if(5 <= x && x < 10){
     alert((2 - 1.5* (x-3) * (x-3)).toFixed(3))
   }
-  else if(10 <= x < 20){
+  else if(10 <= x && x < 20){
     alert((x / 2 - 1.5).toFixed(3))
   }
 </script>
-<script id = "ch0104/14" type = "ch0104/14">
+<script id="ch0104/14" type="ch0104/14">
   var a = +prompt("请输入重量")
   var b = prompt("请确认是否加急y/n")
   var c = Math.ceil((a - 1000) / 500) * 4
@@ -318,7 +311,7 @@ else{
     alert(c + 13 + "元")
   }
 </script>
-<script id = "ch0104/15" type = "ch0104/15">
+<script id="ch0104/15" type="ch0104/15">
   var a = +prompt("请输入一个数")
   var b = +prompt("请输入一个数")
   var c = +prompt("请输入一个数")
@@ -332,7 +325,7 @@ else{
     alert(c)
   }
 </script>
-<script id = "ch0104/16" type = "ch0104/16">
+<script id="ch0104/16" type="ch0104/16">
   var a = +prompt("请输入一个数")
   var b = +prompt("请输入一个数")
   var c = +prompt("请输入一个数")
@@ -343,7 +336,7 @@ else{
     alert("no")
   }
 </script>
-<script id = "ch0104/17" type = "ch0104/17">
+<script id="ch0104/17" type="ch0104/17">
   var a = +prompt("请输入一个年份")
   if((a % 4 == 0) && !(a % 100 == 0) || (a % 400 == 0)){
     alert("Y")
@@ -352,21 +345,21 @@ else{
     alert("N")
   }
 </script>
-<script id = "ch0104/18" type = "ch0104/18">
+<script id="ch0104/18" type="ch0104/18">
   var a = +prompt("请输入x坐标值起始范围")
   var b = +prompt("请输入y坐标值起始范围")
   var c = +prompt("请输入x坐标值结束范围")
   var d = +prompt("请输入y坐标值结束范围")
   var e = +prompt("请输入x坐标值")
   var f = +prompt("请输入y坐标值")
-  if( ( ( a <= e <= c ) || ( a >= e >= c ) ) && ( b <= f <= d ) || ( b >= f >= d ) ){
+  if( ( ( a <= e && a <= c ) || ( a >= e && a >= c ) ) && ( b <= f && b <= d ) || ( b >= f && b >= d ) ){
     alert("yes")
   }
   else{
     alert("no")
   }
 </script>
-<script id = "ch0104/19" type = "ch0104/19">
+<script id="ch0104/19" type="ch0104/19">
   var a = +prompt("请输入一个数")
   var b = +prompt("请输入一个数")
   var c = prompt("请输入一个操作符")
@@ -389,7 +382,7 @@ else{
     alert("Invalid operator!")
   }
 </script>
-<script id = "ch0104/20" type = "ch0104/20">
+<script id="ch0104/20" type="ch0104/20">
   var a = +prompt("请输入一个数")
   var b = +prompt("请输入一个数")
   var c = +prompt("请输入一个数")
@@ -409,7 +402,7 @@ else{
     console.log("x2=" + f + "-" + g + "i")
   }
 </script>
-<script id = "ch0104/21" type = "ch0104/21">
+<script id="ch0104/21" type="ch0104/21">
   var n = +prompt("请输入苹果数n")
   var x = +prompt("请输入虫子吃苹果效率x")
   var y = +prompt("请输入时间y")
@@ -417,6 +410,278 @@ else{
     alert(n - y / x)
   }
   else{
-    alert(n - Math.ceil(y / x))
+    alert(n - (y - y % x) / x - 1
+)
   }
+</script>
+<script id="ch0105/01" type=" ">
+  var n = +prompt("请输入人数")
+  var sum = 0
+  // for (var i=1;i<=n;i++){
+  //    var age = +prompt("请输入年龄")
+  //    sum = sum + age   
+  // }
+  // console.log((sum/n).toFixed(2))
+
+
+
+  var i = 1 
+  while (i <= n){
+    i++;
+    var age = +prompt("2")
+    sum = sum + age
+  }
+  
+  console.log((sum/n).toFixed(2))
+</script>
+<script id="ch0105/02" type=" ">
+  var n = 12
+  var sum =0
+  for (var i = 1 ; i <= n ;i++){
+    var money = +prompt("请输入当月工资")
+    sum  = sum + money
+  }
+  console.log("$" + (sum / 12).toFixed(2))
+ </script>
+<script id="ch0105/03" type=" ">
+  var n = +prompt()
+  var sum =0
+  for (var i = 1 ; i <= n ;i++){
+    var money = +prompt("请输入number")
+    sum  = sum + money
+  }
+  console.log((sum / n).toFixed(4))
+ </script>
+<script id="ch0105/04" type=" ">
+  var n = +prompt()
+  var sum =0
+  for (var i = 1 ; i <= n ;i++){
+    var money = +prompt("请输入number")
+    sum  = sum + money
+  }
+  console.log("" + sum + " " + (sum / n).toFixed(5))
+ </script>
+<script id="ch0105/05" type=" ">
+  var n = +prompt()
+  var sum = 0
+  for (var i = 1 ; i <= n ;i++){
+    var money = +prompt("请输入number")
+    if (money > sum){
+      sum = money
+    }  
+  }
+  console.log(sum)
+</script>
+<script id="ch0105/06" type =" ">
+  var n = +prompt()
+  var min = 0
+  var max = 0
+  for (var i = 1; i <= n; i++) {
+    var money = +prompt("请输入number")
+    if (money >= max) {
+      max = money
+      console.log(max)  
+    }
+    if ( money <= min) {
+      min = money
+      console.log(min)
+    }
+  }
+  console.log(max - min)
+</script>
+<script id="ch0105/07" type = " ">
+  var n = +prompt()
+  var au = 0
+  var ag = 0
+  var cu = 0
+  var sum = 0
+  for (var i = 0 ; i < n ;i++) {
+    var gold = +prompt("请输入金牌数")
+    au = au + gold
+    var sliver = +prompt("请输入银牌数")
+    ag = ag + sliver
+    var copper = +prompt("请输入铜牌数")
+    cu = cu + copper
+    sum = au + ag + cu
+  }
+  console.log(au)
+  console.log(ag)
+  console.log(cu)
+  console.log(sum)
+</script>
+<script id="ch0105/08" type = " "> 
+  var n = +prompt("请输入边数")
+  var gree = 0
+  for(var i = 0 ; i < n-1 ; i++){
+    var deg = +prompt("请输入角度数")
+    gree = deg + gree
+    if ((n-2)*180 < gree ){
+      console.log("Invalid")
+    }
+    else {
+      console.log((n-2)*180 - gree )
+    }
+  }
+</script>
+<script id="ch0105/09" type = " ">
+  var m = +prompt("输入一个整数m")
+  var n = +prompt("输入一个整数n") 
+  var sum = 0
+  for ( ; m <= n ; m++){
+    if (m % 2 == 1) {
+      sum = sum + m
+    }
+    
+  }
+  console.log(sum)
+</script>
+<script id="ch0105/10" type = " ">
+  var m = +prompt("输入一个整数m")
+  var n = +prompt("输入一个整数n") 
+  var sum = 0
+  for ( ; m <= n ; m++){
+    if (m % 17 == 0){
+      sum = m + sum
+    }
+    console.log(sum)
+  }
+</script>
+<script id="ch0105/11" type = " ">
+  var k = +prompt("请输入正整数k")
+  var o = 0
+  var f = 0
+  var t = 0
+  for (var i = 1; i <= k;i++){
+    var n = +prompt("请输入正整数n")
+    if (n == 1) {
+      o = o + 1 
+    }
+    if (n == 5) {
+      f = f + 1   
+    }
+    if (n == 10) {
+      t = t + 1 
+    }
+    console.log(o)
+    console.log(f)
+    console.log(t)
+  }
+</script>
+<script id="ch0105/12" type = " ">
+  var n = +prompt("请输入序列长度n")
+  var m = +prompt("请输入指定数字m")
+  var s = 0 
+  for (var i = 1 ;i <= n ; i++) {
+    var p = +prompt("请输入数字")
+    if (p == m){
+      s++
+    }
+  }
+  console.log(s)
+</script>
+<script id="ch0105/13" type = " ">
+  var n = +prompt("请输入一个整数n")
+  var a = +prompt("请输入底数a")
+  var s = 1
+  for (var i = 1 ; i <= n ; i++) {
+    s = a * s
+  }
+  console.log(s)
+</script>
+<script id="ch0105/14" type = " ">
+  var x = +prompt("请输入人口基数")
+  var n = +prompt("请输入年数")
+  for (var i = 1 ; i <= n ; i++) {
+    x = x + x * 0.001
+  }
+  console.log(x.toFixed(4))
+</script>
+<script id="ch0105/15" type = " ">
+  var r = +prompt("请输入年利率")
+  var m = +prompt("请输入现在的总资金")
+  var y = +prompt("请输入投资的年数")
+  for (var i = 1 ; i <= y ; i++) {
+    m = m + m * r / 100 
+  }
+  console.log(m.toFixed(0))
+</script>
+<script id="ch0105/16" type = "">
+  var n = +prompt("请输入薪资")
+  var k = +prompt("请输入房价增长百分比")
+  var m = 200
+  var sum = 0
+  for (var i = 1; i <= 20 ; i++) {
+    sum = sum + n
+    
+    if (sum >= m){
+      console.log(  i)
+      break
+    }
+    m = m * (1+k / 100)
+    else {
+      console.log("Impossible")
+    }
+  }    
+</script>
+<script id="ch0105/17" type = " ">
+  var a = b = 1
+  var k = +prompt()
+  for (var i = 1;i < k;i++) {
+    b = a + b
+    a = b - a 
+    console.log(a)
+  }
+</script>
+<script id="ch0105/18" type = " ">
+  var n = +prompt("sample")
+  var b = +prompt("总病例数")
+  var c = +prompt("疗效有效病例数")
+  var x = c / b
+  for (var u = 1;u < n;u++) {
+    var d = +prompt("new总病例数")
+    var e = +prompt("new疗效有效病例数")
+    var y = e / d 
+    if (y - x > 0.05) {
+      console.log("better")
+    }
+    else if (x - y > 0.05) {
+      console.log("worse")
+    }
+    else {
+      console.log("same")
+    }
+  }
+
+</script>
+<script id="ch0105/19" type = " ">
+  var n = +prompt("屋顶数")
+  for (var i = 1;i <= n;i++) {
+    var  a = +prompt("x坐标")
+    var  b = +prompt("y坐标")
+    var  c = +prompt("人数")
+    var  d = Math.sqrt(a * a + b * b) / 25
+    console.log(Math.ceil(d + 1.5 * c))
+  }
+</script>
+<script id="ch0105/20" type = "">
+  var h = +prompt("初始高度")
+  var sum = 0
+  for (var i = 1;i <= 10;i++) {
+    sum = sum + h
+    h = h / 2
+    console.log(sum)
+    console.log(h) 
+  }
+</script>
+<script id="ch0105/21" type = " ">
+</script>
+<script id="ch0105/22" type = " ">
+</script>
+<script id="ch0105/23" type = " ">
+</script>
+<script id="ch0105/24" type = " ">
+</script>
+<script id="ch0105/25" type = " ">
+</script>
+<script id="ch0105/26" type = " ">
 </script>
